--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,9 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^6.0.0
+  path: ^1.8.3
   path_provider: ^2.1.1
+  file_picker: ^6.0.0
 
 dev_dependencies:
   flutter_test:
